--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: rgba(183,222,237,1);
+  background: -moz-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(100,65,165,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(183,222,237,1)), color-stop(100%, rgba(100,65,165,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(100,65,165,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(100,65,165,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(100,65,165,1) 100%);
+  background: linear-gradient(135deg, rgba(183,222,237,1) 0%, rgba(100,65,165,1) 100%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
