--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,18 @@
     transform: rotate(360deg);
   }
 }
+.card{
+  width: 300px;
+  height: 300px;
+  color: black;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: 50px 50px;
+  border-radius: 5%;
+  -webkit-box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
+  box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
+}
