--- a/src/App.css
+++ b/src/App.css
@@ -50,10 +50,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 50px 50px;
   border-radius: 5%;
   -webkit-box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
   box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
+}
+
+.fa-cloud{
+  color: #1b1b1b;
+  font-size: 3rem;
 }
