--- a/src/App.css
+++ b/src/App.css
@@ -43,22 +43,37 @@
   }
 }
 .card{
-  width: 300px;
-  height: 300px;
+  width: 9rem;
+  font-size: 0.7em;
   color: black;
-  background-color: whitesmoke;
+  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  margin: 50px 50px;
+  margin: 50px;
   border-radius: 5%;
   -webkit-box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
   box-shadow: 0px 14px 33px -11px rgba(0,0,0,0.75);
 }
 
-.fa-cloud{
-  color: #1b1b1b;
-  font-size: 3rem;
+.contenedorTarjetas{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: rgba(25,147,147,0.1);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: rgb(137, 137, 255);
 }
