--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background: rgba(183,222,237,1);
@@ -30,23 +20,14 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
 .card{
-  width: 9rem;
+  width: 10rem;
   font-size: 0.7em;
-  color: black;
-  background-color: white;
+  padding: 1rem;
+  color: rgba(255, 255, 255, 0.842);
+  background-color: rgba(255, 255, 255, 0.226);
   display: flex;
   flex-direction: column;
   align-items: center;
